fixed sidebar style when content length was too long

--- a/styles/components/Sidebar.scss
+++ b/styles/components/Sidebar.scss
@@ -35,4 +35,5 @@
     width: 240px;
     overflow-y: scroll;
     height: calc(100vh - 64px);
+    flex-shrink: 0;
 }
